modules/cli/src/test/resources/good/reach/globals/grecursion/Recursion20.scr
module good.reach.globals.grecursion.Recursion20;


global protocol Proto1(role A, role B)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			continue X;
		}
		or
		{
			2() from A to B;
		}
	}
	3() from B to A;  // Good: choice has an exit path
}

